infra/environments/development/configurationPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crash-game
  labels:
    app: crash-game
spec:
  template:
    spec:
      containers:
        - name: crash-game
