infra/environments/development/ingressPatch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crash-game-ingress
spec:
  tls:
  - hosts:
    - dev-elon-api.wallfair.io
    secretName: crash-game-development-cert-secret
  rules:
  - host: dev-elon-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: crash-game-backend
              port:
                number: 80
  - host: dev-pump-dump-api.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pump-dump-game-backend
              port:
                number: 80
